fix favicon placeholder width

--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -42,7 +42,7 @@ const decodedTitle = item.title ? decodeHtmlEntities(item.title) : undefined;
 				loading="lazy"
 			/>
 		) : (
-			<LinkIcon title="No favicon" />
+			<LinkIcon title="No favicon" class="min-w-4 min-h-4" />
 		)
 	}
 	<div class="grow min-w-0 !mt-0">
