--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -3,7 +3,6 @@ import { base } from "astro:config/client";
 import type Parser from "rss-parser";
 import Popover from "./Popover.astro";
 import ArchiveIcon from "./icons/ArchiveIcon.astro";
-import BookIcon from "./icons/BookIcon.astro";
 import LinkIcon from "./icons/LinkIcon.astro";
 import SquareTopDownIcon from "./icons/SquareTopDownIcon.astro";
 
@@ -115,7 +114,17 @@ const linkAttrs = {
 				</linkAttrs.el>
 			</div>
 
-			<div class="flex items-start gap-1">
+			<div class="flex flex-col md:flex-row items-start gap-1">
+				<a
+					href={item.link}
+					rel="noopener noreferrer"
+					target="_blank"
+					aria-label="Open in new tab"
+					title="Open in new tab"
+					class="p-1 bg-bg-2 hover:bg-ui-2 md:rounded border border-ui-2 hover:border-ui-3 transition-all duration-200"
+				>
+					<SquareTopDownIcon class="w-3 h-3 text-tx-2 hover:text-tx" />
+				</a>
 				<a
 					href={`https://archive.is/${item.link}`}
 					aria-label="Open in archive.is"
@@ -142,13 +151,39 @@ const linkAttrs = {
 				}
 			</div>
 		</div>
-		<Popover id={`rss-contents-${item.link}`}>
-			<div class="p-4">
+		<Popover id={`rss-contents-${item.link}`} class="space-y-4">
+			<hgroup>
 				<h3 class="text-base font-semibold leading-tight mb-2">
-					{item.title}
+					<a href={item.link} rel="noopener noreferrer" target="_blank">
+						{item.title}
+						<SquareTopDownIcon class="inline-block w-3 h-3" />
+					</a>
 				</h3>
-				<article class="text-sm text-tx-2" set:html={item.content} />
-			</div>
+				<p class="flex items-center gap-1.5 text-xs text-tx-2">
+					{
+						Boolean(item.creator) && (
+							<>
+								<span class="font-medium text-pu">{item.creator}</span>
+								<span class="text-ui-3">•</span>
+							</>
+						)
+					}
+					{
+						Boolean(hostname) && (
+							<>
+								<span class="font-medium text-tx">{hostname}</span>
+								<span class="text-ui-3">•</span>
+							</>
+						)
+					}
+					<relative-time
+						datetime={new Date(
+							item.pubDate ?? item.isoDate ?? "",
+						).toISOString()}
+						class="text-tx-2"></relative-time>
+				</p>
+			</hgroup>
+			<article class="prose" set:html={item.content} />
 		</Popover>
 	</div>
 </Element>
