Change font to geometric humanist

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -110,7 +110,9 @@ items = items
 			});
 		</script>
 	</head>
-	<body class="min-h-screen bg-bg text-tx space-y-4 *:mx-auto *:max-w-prose">
+	<body
+		class="min-h-screen bg-bg text-tx space-y-4 *:mx-auto *:max-w-prose font-gemoetric-humanist"
+	>
 		<header
 			class="border-1 border-ui-3 md:rounded-xl p-4 flex flex-col sm:flex-row gap-3 items-start sm:items-center justify-between"
 		>
